<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/save_as"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextbody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="@string/Title_field"
        android:singleLine="true" />

    <Button
        android:id="@+id/button_dialog1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextbody1"
        android:layout_below="@+id/editTextbody1"
        android:layout_marginTop="20dp"
        android:text="@string/Save_button" />

    <Button
        android:id="@+id/button_dialog2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_dialog1"
        android:layout_alignBottom="@+id/button_dialog1"
        android:layout_toRightOf="@+id/button_dialog1"
        android:text="@string/discard" />

</RelativeLayout>
